[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/assets/input/scripts/SpriteButton.gd" type="Script" id=1]

[node name="SpriteButton" type="Panel"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -16.0
margin_right = -1008.0
margin_bottom = -584.0
rect_min_size = Vector2( 32, 32 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteEmote" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
expand = true
stretch_mode = 6

[connection signal="mouse_entered" from="." to="." method="_on_SpriteButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SpriteButton_mouse_exited"]
